crates/bathy-interpret/tests/snapshots/replay__http-bare-protocol-no-server-header.snap
---
source: crates/bathy-interpret/tests/replay.rs
expression: snapshot
---
[
  {
    "service": "http",
    "product": null,
    "version": null,
    "confidence": 0.7,
    "rule_id": "http.protocol.bare.v1",
    "matched_span": {
      "start": 0,
      "end": 23
    },
    "matched_bytes_hex": "485454502f312e3020343034204e6f7420466f756e640d",
    "rationale": "The response's first line is a well-formed HTTP status line, but no `Server` header matched any known product."
  }
]
