crates/bathy-interpret/tests/snapshots/replay__http-nginx-with-version.snap
---
source: crates/bathy-interpret/tests/replay.rs
expression: snapshot
---
[
  {
    "service": "http",
    "product": "nginx",
    "version": "1.27.5",
    "confidence": 0.95,
    "rule_id": "http.server.nginx.v1",
    "matched_span": {
      "start": 17,
      "end": 37
    },
    "matched_bytes_hex": "5365727665723a206e67696e782f312e32372e35",
    "rationale": "The `Server` response header declared `nginx`, optionally followed by a version."
  },
  {
    "service": "http",
    "product": null,
    "version": null,
    "confidence": 0.7,
    "rule_id": "http.protocol.bare.v1",
    "matched_span": {
      "start": 0,
      "end": 16
    },
    "matched_bytes_hex": "485454502f312e3120323030204f4b0d",
    "rationale": "The response's first line is a well-formed HTTP status line, but no `Server` header matched any known product."
  }
]
