crates/bathy-interpret/tests/snapshots/replay__smtp-postfix-with-capabilities.snap
---
source: crates/bathy-interpret/tests/replay.rs
expression: snapshot
---
[
  {
    "service": "smtp",
    "product": "Postfix",
    "version": null,
    "confidence": 0.85,
    "rule_id": "smtp.banner.postfix.v1",
    "matched_span": {
      "start": 0,
      "end": 30
    },
    "matched_bytes_hex": "323230206632656434393439376638662045534d545020506f7374666978",
    "rationale": "The 220 greeting named Postfix. Postfix's greeting does not carry a version number, so no version can be extracted."
  },
  {
    "service": "smtp",
    "product": null,
    "version": null,
    "confidence": 0.7,
    "rule_id": "smtp.protocol.bare.v1",
    "matched_span": {
      "start": 0,
      "end": 4
    },
    "matched_bytes_hex": "32323020",
    "rationale": "The response is a well-formed 220 SMTP greeting, but no product name in it matched any known rule."
  }
]
