crates/bathy-interpret/tests/snapshots/replay__ssh-bare-protocol-not-openssh.snap
---
source: crates/bathy-interpret/tests/replay.rs
expression: snapshot
---
[
  {
    "service": "ssh",
    "product": null,
    "version": null,
    "confidence": 0.7,
    "rule_id": "ssh.protocol.bare.v1",
    "matched_span": {
      "start": 0,
      "end": 8
    },
    "matched_bytes_hex": "5353482d322e302d",
    "rationale": "The response is a well-formed SSH identification string, but the software field did not match any known product."
  }
]
