crates/bathy-interpret/tests/snapshots/replay__tls-serverhello-structural.snap
---
source: crates/bathy-interpret/tests/replay.rs
expression: snapshot
---
[
  {
    "service": "tls",
    "product": null,
    "version": null,
    "confidence": 0.7,
    "rule_id": "tls.serverhello.structural.v1",
    "matched_span": {
      "start": 0,
      "end": 6
    },
    "matched_bytes_hex": "160303005a02",
    "rationale": "The reply's record layer carried content type 0x16 (handshake) with an inner handshake type of 0x02 (ServerHello) -- confirms a TLS server answered, but (for TLS 1.3) the certificate is encrypted, so no product or version can be read from these bytes."
  }
]
